wp-content/themes/vieuxmoulin/resources/css/content/text-media.scss
@import "../settings/colors.scss";
@import "../settings/breakpoints";

.text-media__section_container {
  display: grid;
  margin-top: 3.125rem;
  text-align: center;
  @include tablet-up {
    grid-template-columns: auto auto;
    grid-template-rows: 40px auto;
    column-gap: clamp(0.8rem, 5vw, 5rem);
  }
}

.text-media {
  &__position {
    position: relative;

    .lightblue, .yellow {
      position: absolute;
      left: -3.5rem;
      top: -2rem;
      z-index: -1;
    }

    .darkblue, .green {
      position: absolute;
      right: -3.5rem;
      top: -2rem;
      z-index: -1;
    }

    &--left {
      order: -1;
      @include tablet-up {
        grid-column: 1;
        grid-row: 1 / 3;
      }
    }

    &--right {
      order: -1;
      @include tablet-up {
        grid-column: 2;
        grid-row: 1 / 3;
      }
    }
  }

  &__content {
    &-container {

    }

    &-container-text {

    }

    &-headline {
      font-size: 1.5rem;
      order: -1;
      margin-bottom: 1.25rem;

    }

    &-text {
      margin-bottom: 1.25rem;
      text-align: start;
    }
  }

  &__image {
    width: 300px;
    height: 300px;
    object-fit: cover;
    border-radius: 50px;
    margin-bottom: 1.25rem;
  }

  &__video {
    width: 300px;
    height: 300px;
  }

}

